# axn_chat_app

./: .clang-format  CMakeLists.txt  README.md  example  example.cpp  main
.devcontainer/: Dockerfile
client/: CMakeLists.txt
client/include/client/: chat_client.h  server_connection.h
client/src/: chat_client.cpp  main.cpp  server_connection.cpp
common/: CMakeLists.txt
common/include/common/: logger.h  protocol.h  socket.h
common/src/: protocol.cpp  socket.cpp
docs/: client_component_class_diagram.mmd  new_client_joins_sequence_diagram.mmd  server_component_class_diagram.mmd
server/: CMakeLists.txt
server/include/server/: client_manager.h  client_session.h  epoll_manager.h  server.h
server/src/: client_manager.cpp  client_session.cpp  epoll_manager.cpp  main.cpp  server.cpp
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  chat_client_test.cpp
tests/common/: CMakeLists.txt  protocol_test.cpp  socket_test.cpp
tests/server/: CMakeLists.txt  client_manager_test.cpp  server_integration_test.cpp
